samples/_failures_safe/1761722479_04bbeb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_285d0b0b.c: In function ‘main’:
./samples/SAFE/__tmp_285d0b0b.c:156:54: error: expected ‘)’ at end of input
  156 |     printf("Compressed size: %zu bytes\n", compressed
      |           ~                                          ^
      |                                                      )
./samples/SAFE/__tmp_285d0b0b.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("Compressed size: %zu bytes\n", compressed
      |     ^~~~~~
